ENH: file restructure, added scipy solver fallback for serial mode

--- a/doc/tutorials/11_FEM2d_theory.ipynb
+++ b/doc/tutorials/11_FEM2d_theory.ipynb
@@ -24,9 +24,7 @@
     "The framework is designed to accompany these features:\n",
     "- MPI-based domain decomposition\n",
     "- parallelized, iterative solver that connects seamlessly\n",
-    "- elastic deformation via fft-based convolution\n",
-    "\n",
-    "Note that we opt for column-based domain decomposition to be consistent with the `muGrid.muFFTEngine`."
+    "- elastic deformation via fft-based convolution"
    ]
   },
   {
@@ -590,7 +588,9 @@
    "id": "e5f9d5a0",
    "metadata": {},
    "source": [
-    "**Overview of important containers**:\n",
+    "**Overview of important containers**\n",
+    "\n",
+    "All index mappings are computed once during setup and are stored in these containers:\n",
     "\n",
     "```\n",
     "FEMAssemblyLayout        top-level container\n",
@@ -704,9 +704,24 @@
     "\n",
     "    def assemble(self, coo_values: NDArray):\n",
     "        self.mat.setValuesCOO(coo_values, PETSc.InsertMode.INSERT_VALUES) # set values using COO information\n",
-    "```\n",
-    "\n",
-    "- alternative for serial?"
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2757bead",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd3f0680",
+   "metadata": {},
+   "source": [
+    "**`PETSc` alternative for serial execution**\n",
+    "\n"
    ]
   },
   {
@@ -722,11 +737,77 @@
    "id": "ecc86ba7",
    "metadata": {},
    "source": [
-    "Elastic deformation is computed using the Green's function based approach\n",
+    "Elastic deformation is computed using the Green's function based approach, where the required convolution operation can be efficiently conducted in Fourier space see [Elastic Deformation Tutorial](07_elastic_deformation.ipynb).\n",
     "\n",
-    "- non-periodic issue\n",
-    "- FFTDomainTranslation\n",
-    "- Coupling/Relaxation"
+    "We use the <code style=\"color:#c586c0\">muGrid.FFTEngine</code> to handle parallelized FFT operations. The `FFTEngine` acts as a wrapper similar to `CartesianDecomposition` and offers `fft` and `ifft` operations. \n",
+    "\n",
+    "Note that we set the subdivision of `CartesianDecomposition` to match the non-customizable subdivision of `FFTEngine`.\n",
+    "In parallelized runs, we can therefore directly use the local pressure fields in `CartesianDecomposition` as input for fft operations.\n",
+    "\n",
+    "Unfortunately however, this is only true for fully periodic domains. For semi-periodic or fully non-periodic domains, the fft approach for elastic deformation requires a decoupling trick, which in turn requires padding the domain from $N_x, N_y \\rightarrow 2 N_x, 2 N_y$. In this case, the local data needs to be massively redistributed (compare figure below).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd062b4a",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: center;\">\n",
+    "  <img src=\"./figures/FFTDomainTranslation.png\" \n",
+    "       alt=\"2D FEM framework\" \n",
+    "       width=500\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dbec52f",
+   "metadata": {},
+   "source": [
+    "This redistribution is handled by the <code style=\"color:#c586c0\">FFTDomainDecomposition</code> wrapper.\n",
+    "Here is a small overview of the most important lines. \n",
+    "\n",
+    "Note that when simulating a fully periodic domain, the exchange plan is basically a 1:1 copy of local fields.\n",
+    "\n",
+    "```python\n",
+    "class FFTDomainTranslation:\n",
+    "    def __init__(self, ...):\n",
+    "        self._compute_fft_grid_size()  # compute FFT grid size based on periodicity\n",
+    "        self.fft_engine = muGrid.FFTEngine([self.Nx_fft, self.Ny_fft], comm)  # create FFTEngine with computed size\n",
+    "        self._build_exchange_plan()  # core: build exchange plan for MPI redistribution\n",
+    "\n",
+    "    def embed(self, src: np.ndarray, dst: np.ndarray):\n",
+    "        # CartesianDecomposition -> FFTDeomposition\n",
+    "\n",
+    "    def extract(self, src: np.ndarray, dst: np.ndarray):\n",
+    "        # FFTDecomposition -> CartesianDecomposition\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91a8c44a",
+   "metadata": {},
+   "source": [
+    "When computing displacement from elastic deformation, the wrapper functions of <code style=\"color:#c586c0\">FFTDomainDecomposition</code> are used as follows:\n",
+    "\n",
+    "```python\n",
+    "class ElasticDeformation:\n",
+    "    def get_deformation(self, p: NDArray)\n",
+    "    \n",
+    "        # redistribute pressure field on padded domain\n",
+    "        self.fft_translation.embed(p, p_padded_domain)\n",
+    "\n",
+    "        # calculate force and get displacement via fft (on padded domain)\n",
+    "        force_padded_domain = self.area_per_cell * p_padded_domain\n",
+    "        disp_padded_domain = - self.ElDef.evaluate_disp(force_padded_domain)\n",
+    "\n",
+    "        # collect displacement field from padded domain\n",
+    "        self.fft_translation.extract(disp_padded_domain, displacement)\n",
+    "    \n",
+    "        return displacement  # displacement on local CartesianDecomposition field\n",
+    "```"
    ]
   },
   {
@@ -742,7 +823,17 @@
    "id": "366eedc0",
    "metadata": {},
    "source": [
-    "List of all .py files that are connected to 2D FEM"
+    "| File | Description |\n",
+    "|------|-------------|\n",
+    "| `solver_fem_2d.py` | Main 2D FEM solver: Newton iteration, assembly dispatch, time-stepping |\n",
+    "| `fem_2d/elements.py` | <code style=\"color:#c586c0\">TriangleQuadrature</code> - shape functions, derivatives, interpolation operators |\n",
+    "| `fem_2d/terms.py` | <code style=\"color:#c586c0\">NonLinearTerm</code>, `get_active_terms()`, residual terms (`R11x`, `R11y`, ...) |\n",
+    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <code style=\"color:#c586c0\">RHSTermMap</code>, <code style=\"color:#c586c0\">PETScAssemblyInfo</code> |\n",
+    "| `fem_2d/grid_index.py` | <code style=\"color:#c586c0\">GridIndexManager</code> - local/global index masks, BC handling, stencil connectivity |\n",
+    "| `fem_2d/quad_fields.py` | <code style=\"color:#c586c0\">QuadFieldManager</code> - field storage, nodal→quadrature interpolation |\n",
+    "| `fem_2d/petsc_system.py` | <code style=\"color:#c586c0\">PETScSystem</code> - distributed matrix assembly and KSP linear solve (parallel/serial) |\n",
+    "| `fem_2d/scipy_system.py` | <code style=\"color:#c586c0\">ScipySystem</code> - serial sparse solver fallback when PETSc unavailable |\n",
+    "| `fem_1d/num_solver.py` | <code style=\"color:#c586c0\">Solver</code> - Newton iteration wrapper (shared with 1D) |"
    ]
   },
   {
