MAINT: removed dynamic option from fem solver

--- a/doc/tutorials/11_FEM2d_theory.ipynb
+++ b/doc/tutorials/11_FEM2d_theory.ipynb
@@ -828,12 +828,11 @@
     "| `solver_fem_2d.py` | Main 2D FEM solver: Newton iteration, assembly dispatch, time-stepping |\n",
     "| `fem_2d/elements.py` | <code style=\"color:#c586c0\">TriangleQuadrature</code> - shape functions, derivatives, interpolation operators |\n",
     "| `fem_2d/terms.py` | <code style=\"color:#c586c0\">NonLinearTerm</code>, `get_active_terms()`, residual terms (`R11x`, `R11y`, ...) |\n",
-    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <code style=\"color:#c586c0\">RHSTermMap</code>, <code style=\"color:#c586c0\">PETScAssemblyInfo</code> |\n",
+    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <code style=\"color:#c586c0\">RHSTermMap</code>, <br> <code style=\"color:#c586c0\">PETScAssemblyInfo</code> - precomputed indexing, local-global translation and weightings |\n",
     "| `fem_2d/grid_index.py` | <code style=\"color:#c586c0\">GridIndexManager</code> - local/global index masks, BC handling, stencil connectivity |\n",
     "| `fem_2d/quad_fields.py` | <code style=\"color:#c586c0\">QuadFieldManager</code> - field storage, nodal→quadrature interpolation |\n",
     "| `fem_2d/petsc_system.py` | <code style=\"color:#c586c0\">PETScSystem</code> - distributed matrix assembly and KSP linear solve (parallel/serial) |\n",
-    "| `fem_2d/scipy_system.py` | <code style=\"color:#c586c0\">ScipySystem</code> - serial sparse solver fallback when PETSc unavailable |\n",
-    "| `fem_1d/num_solver.py` | <code style=\"color:#c586c0\">Solver</code> - Newton iteration wrapper (shared with 1D) |"
+    "| `fem_2d/scipy_system.py` | <code style=\"color:#c586c0\">ScipySystem</code> - serial sparse solver fallback when PETSc unavailable |"
    ]
   },
   {
