MAINT: updated dependency chain for muGrid 0.105.1

--- a/doc/tutorials/11_FEM2d_theory.ipynb
+++ b/doc/tutorials/11_FEM2d_theory.ipynb
@@ -848,7 +848,8 @@
    "id": "b57681c4",
    "metadata": {},
    "source": [
-    "- mention added dy terms"
+    "- mention added dy terms\n",
+    "- stabilization terms"
    ]
   }
  ],
