MAINT: moved term handling to solver, 2d plotting fix

--- a/doc/tutorials/09_FEM1d_examples.ipynb
+++ b/doc/tutorials/09_FEM1d_examples.ipynb
@@ -690,6 +690,363 @@
     "problem.run()\n",
     "problem.animate()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "i61nrnmrcto",
+   "metadata": {},
+   "source": [
+    "#### Temperature Diffusion\n",
+    "\n",
+    "Dynamic simulation of 1D heat diffusion with comparison to the analytic solution.\n",
+    "\n",
+    "Setup:\n",
+    "- Dirichlet temperature boundary conditions: T=0 at both ends\n",
+    "- Initial temperature: sine profile T(x,0) = T_max * sin(π*x_norm) where x_norm ∈ [0,1]\n",
+    "- No wall movement (U=0), pure diffusion\n",
+    "\n",
+    "The analytic solution for this problem is:\n",
+    "$$T(x,t) = T_{max} \\cdot e^{-\\lambda^2 t} \\cdot \\sin\\left(\\pi \\cdot x_{norm}\\right)$$\n",
+    "\n",
+    "where $\\lambda = \\sqrt{\\alpha} \\cdot \\frac{\\pi}{L_{eff}}$, $\\alpha = \\frac{k}{c_v \\rho}$ is the thermal diffusivity, and $L_{eff} = L - dx$ is the effective domain length (accounting for cell-centered discretization).\n",
+    "\n",
+    "Terms used:\n",
+    "- `R35`: Temperature diffusion ∂²T/∂x²\n",
+    "- `R3T`: Energy time derivative\n",
+    "- Mass and momentum terms for density and velocity fields\n",
+    "\n",
+    "The animation compares FEM results with the analytic solution. The remaining error (~1-2%) is numerical discretization error, not a problem with the implementation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "r33ciz5eai",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Temperature diffusion with analytic comparison\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from GaPFlow import Problem\n",
+    "\n",
+    "# Physical parameters (normalized for analytic comparison)\n",
+    "L = 1.0        # Domain length [m]\n",
+    "k = 1.0        # Thermal conductivity [W/(m·K)]\n",
+    "cv = 1.0       # Specific heat capacity [J/(kg·K)]\n",
+    "rho = 1.0      # Density [kg/m³]\n",
+    "T_max = 1.0    # Maximum initial temperature [K]\n",
+    "\n",
+    "Nx = 100\n",
+    "dt = 0.005\n",
+    "max_it = 100\n",
+    "\n",
+    "sim = f\"\"\"\n",
+    "options:\n",
+    "    output: data/temp_diffusion\n",
+    "    write_freq: 10\n",
+    "    silent: False\n",
+    "grid:\n",
+    "    Lx: {L}\n",
+    "    Ly: 1.\n",
+    "    Nx: {Nx}\n",
+    "    Ny: 1\n",
+    "    xE: ['D', 'N', 'N']\n",
+    "    xW: ['D', 'N', 'N']\n",
+    "    yS: ['P', 'P', 'P']\n",
+    "    yN: ['P', 'P', 'P']\n",
+    "    xE_D: {rho}\n",
+    "    xW_D: {rho}\n",
+    "geometry:\n",
+    "    type: inclined\n",
+    "    hmax: 1.0e-2\n",
+    "    hmin: 1.0e-2\n",
+    "    U: 0.\n",
+    "    V: 0.\n",
+    "numerics:\n",
+    "    solver: fem\n",
+    "    tol: 0\n",
+    "    dt: {dt}\n",
+    "    max_it: {max_it}\n",
+    "properties:\n",
+    "    EOS: PL\n",
+    "    shear: 1.846e-5\n",
+    "    bulk: 0.\n",
+    "    P0: 101325\n",
+    "    rho0: {rho}\n",
+    "    alpha: 0.\n",
+    "fem_solver:\n",
+    "    dynamic: True\n",
+    "    max_iter: 10\n",
+    "    R_norm_tol: 1e-8\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R35', 'R3T']\n",
+    "energy_spec:\n",
+    "    cv: {cv}\n",
+    "    k: {k}\n",
+    "    T0: [half_sine, 0.0, {T_max}]\n",
+    "    bc_xW: D\n",
+    "    bc_xE: D\n",
+    "    T_bc_xW: 0.0\n",
+    "    T_bc_xE: 0.0\n",
+    "\"\"\"\n",
+    "\n",
+    "# Store temperature history for comparison\n",
+    "T_history = {'time': [], 'T': []}\n",
+    "\n",
+    "def track_temperature(args):\n",
+    "    t = len(T_history['time']) * dt\n",
+    "    T_history['time'].append(t)\n",
+    "    T_history['T'].append(problem.energy.temperature[1:-1, 1].copy())\n",
+    "\n",
+    "problem = Problem.from_string(sim)\n",
+    "problem.solver.num_solver.callback_fun = track_temperature\n",
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ilkbbbhvby",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Animated comparison with analytic solution\n",
+    "import sys\n",
+    "sys.path.insert(0, './utils')\n",
+    "from analytic import heat_equation_1d\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import animation\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "# Cell centers and normalized coordinates (matching FEM initialization)\n",
+    "dx = L / Nx\n",
+    "x_vec = np.linspace(dx/2, L - dx/2, Nx)\n",
+    "x_norm = (x_vec - dx/2) / (L - dx)  # FEM uses this for initial condition\n",
+    "t_vec = np.array(T_history['time'])\n",
+    "\n",
+    "# Compute analytic solution using the same normalized coordinates\n",
+    "# The FEM initializes T(x,0) = sin(pi*x_norm) where x_norm goes from 0 to 1\n",
+    "# This corresponds to a domain of effective length L_eff = L - dx\n",
+    "L_eff = L - dx\n",
+    "T_analytic = heat_equation_1d(L_eff, cv, k, rho, T_max, x_norm * L_eff, t_vec)\n",
+    "T_numeric = np.array(T_history['T'])\n",
+    "\n",
+    "# Print error summary\n",
+    "print(f\"Initial max error: {np.max(np.abs(T_analytic[0] - T_numeric[0])):.2e} (should be ~0)\")\n",
+    "print(f\"Overall max error: {np.max(np.abs(T_analytic - T_numeric)):.2e} (numerical discretization)\")\n",
+    "\n",
+    "# Create animation\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 3))\n",
+    "\n",
+    "line_fem, = ax1.plot([], [], 'b-', linewidth=2, label='FEM')\n",
+    "line_ana, = ax1.plot([], [], 'r--', linewidth=2, label='Analytic')\n",
+    "ax1.set_xlim(0, L)\n",
+    "ax1.set_ylim(-0.1, 1.1)\n",
+    "ax1.set_xlabel('x [m]')\n",
+    "ax1.set_ylabel('T [K]')\n",
+    "ax1.set_title('Temperature Profiles')\n",
+    "ax1.legend()\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "\n",
+    "line_err, = ax2.plot([], [], 'g-', linewidth=2)\n",
+    "ax2.set_xlim(0, L)\n",
+    "ax2.set_ylim(0, 0.02)\n",
+    "ax2.set_xlabel('x [m]')\n",
+    "ax2.set_ylabel('|T_FEM - T_analytic|')\n",
+    "ax2.set_title('Absolute Error')\n",
+    "ax2.grid(True, alpha=0.3)\n",
+    "\n",
+    "time_text = ax1.text(0.02, 0.95, '', transform=ax1.transAxes, fontsize=10)\n",
+    "error_text = ax2.text(0.02, 0.95, '', transform=ax2.transAxes, fontsize=10)\n",
+    "\n",
+    "def init():\n",
+    "    line_fem.set_data([], [])\n",
+    "    line_ana.set_data([], [])\n",
+    "    line_err.set_data([], [])\n",
+    "    time_text.set_text('')\n",
+    "    error_text.set_text('')\n",
+    "    return line_fem, line_ana, line_err, time_text, error_text\n",
+    "\n",
+    "def animate(i):\n",
+    "    line_fem.set_data(x_vec, T_numeric[i])\n",
+    "    line_ana.set_data(x_vec, T_analytic[i])\n",
+    "    error = np.abs(T_numeric[i] - T_analytic[i])\n",
+    "    line_err.set_data(x_vec, error)\n",
+    "    time_text.set_text(f't = {t_vec[i]:.3f} s')\n",
+    "    error_text.set_text(f'max error = {np.max(error):.2e}')\n",
+    "    return line_fem, line_ana, line_err, time_text, error_text\n",
+    "\n",
+    "ani = animation.FuncAnimation(fig, animate, init_func=init, frames=len(t_vec),\n",
+    "                               interval=50, blit=True, repeat=True)\n",
+    "plt.tight_layout()\n",
+    "plt.close(fig)\n",
+    "HTML(ani.to_jshtml())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6p7xlbcfsy",
+   "metadata": {},
+   "source": [
+    "#### Temperature Convection (Sine)\n",
+    "\n",
+    "Dynamic simulation of temperature advection with a sine initial profile.\n",
+    "\n",
+    "Setup:\n",
+    "- Periodic boundary conditions\n",
+    "- Wall motion (U > 0) drives Couette flow which advects the temperature\n",
+    "- Initial temperature: sine profile\n",
+    "- No thermal diffusion (k=0)\n",
+    "\n",
+    "The temperature wave travels with the average flow velocity. For Couette flow with wall velocity U, the average velocity is U/2. With periodic boundaries, the sine profile wraps around the domain.\n",
+    "\n",
+    "Terms used:\n",
+    "- `R31`: Temperature convection (advection with velocity field)\n",
+    "- `R3T`: Energy time derivative\n",
+    "- Mass and momentum terms for density and velocity fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ngbdtjr9lc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Temperature convection with sine initial profile\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from GaPFlow import Problem\n",
+    "\n",
+    "sim = \"\"\"\n",
+    "options:\n",
+    "    output: data/temp_convection_sine\n",
+    "    write_freq: 5\n",
+    "    silent: False\n",
+    "grid:\n",
+    "    Lx: 1.0\n",
+    "    Ly: 1.\n",
+    "    Nx: 50\n",
+    "    Ny: 1\n",
+    "    xE: ['P', 'P', 'P']\n",
+    "    xW: ['P', 'P', 'P']\n",
+    "    yS: ['P', 'P', 'P']\n",
+    "    yN: ['P', 'P', 'P']\n",
+    "geometry:\n",
+    "    type: inclined\n",
+    "    hmax: 1.0e-2\n",
+    "    hmin: 1.0e-2\n",
+    "    U: 0.1\n",
+    "    V: 0.\n",
+    "numerics:\n",
+    "    solver: fem\n",
+    "    tol: 0\n",
+    "    dt: 0.1\n",
+    "    max_it: 50\n",
+    "properties:\n",
+    "    EOS: PL\n",
+    "    shear: 1.846e-5\n",
+    "    bulk: 0.\n",
+    "    P0: 101325\n",
+    "    rho0: 10.0\n",
+    "    alpha: 0.\n",
+    "fem_solver:\n",
+    "    dynamic: True\n",
+    "    max_iter: 10\n",
+    "    R_norm_tol: 1e-8\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R31', 'R3T']\n",
+    "energy_spec:\n",
+    "    cv: 718.0\n",
+    "    k: 0.0\n",
+    "    T0: [half_sine, 0.0, 300.0]\n",
+    "\"\"\"\n",
+    "\n",
+    "problem = Problem.from_string(sim)\n",
+    "problem.run()\n",
+    "problem.animate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "r8da6qugcla",
+   "metadata": {},
+   "source": [
+    "#### Temperature Convection (Block)\n",
+    "\n",
+    "Dynamic simulation of temperature advection with a block (step) initial profile.\n",
+    "\n",
+    "Setup:\n",
+    "- Same as sine convection but with block initial condition\n",
+    "- Initial temperature: T_max in center region (0.4 ≤ x/L ≤ 0.6), T_min elsewhere\n",
+    "\n",
+    "The block profile is more challenging for numerical methods due to the discontinuities. This demonstrates how the FEM handles steep gradients in the advection equation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9lm1kgsrb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Temperature convection with block initial profile\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from GaPFlow import Problem\n",
+    "\n",
+    "sim = \"\"\"\n",
+    "options:\n",
+    "    output: data/temp_convection_block\n",
+    "    write_freq: 5\n",
+    "    silent: False\n",
+    "grid:\n",
+    "    Lx: 1.0\n",
+    "    Ly: 1.\n",
+    "    Nx: 50\n",
+    "    Ny: 1\n",
+    "    xE: ['P', 'P', 'P']\n",
+    "    xW: ['P', 'P', 'P']\n",
+    "    yS: ['P', 'P', 'P']\n",
+    "    yN: ['P', 'P', 'P']\n",
+    "geometry:\n",
+    "    type: inclined\n",
+    "    hmax: 1.0e-2\n",
+    "    hmin: 1.0e-2\n",
+    "    U: 0.1\n",
+    "    V: 0.\n",
+    "numerics:\n",
+    "    solver: fem\n",
+    "    tol: 0\n",
+    "    dt: 0.1\n",
+    "    max_it: 50\n",
+    "properties:\n",
+    "    EOS: PL\n",
+    "    shear: 1.846e-5\n",
+    "    bulk: 0.\n",
+    "    P0: 101325\n",
+    "    rho0: 10.0\n",
+    "    alpha: 0.\n",
+    "fem_solver:\n",
+    "    dynamic: True\n",
+    "    max_iter: 10\n",
+    "    R_norm_tol: 1e-8\n",
+    "    equations:\n",
+    "        energy: True\n",
+    "        term_list: ['R11', 'R11S', 'R1T', 'R21', 'R24', 'R2T', 'R31', 'R3T']\n",
+    "energy_spec:\n",
+    "    cv: 718.0\n",
+    "    k: 0.0\n",
+    "    T0: [block, 0.0, 300.0]\n",
+    "\"\"\"\n",
+    "\n",
+    "problem = Problem.from_string(sim)\n",
+    "problem.run()\n",
+    "problem.animate()"
+   ]
   }
  ],
  "metadata": {},
