FIX: energy boundary condition bug

--- a/doc/tutorials/09_FEM1d_examples.ipynb
+++ b/doc/tutorials/09_FEM1d_examples.ipynb
@@ -44,7 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# non-periodic boundary conditions and steady-state; inclined slider use case\n",
     "%matplotlib inline\n",
     "from GaPFlow import Problem\n",
     "\n",
@@ -294,14 +293,14 @@
     "E_mean_history = []\n",
     "T_mean_history = []\n",
     "\n",
-    "def compute_means(args):\n",
+    "def compute_means():\n",
     "    E_mean = np.mean(problem.energy.energy)\n",
     "    E_mean_history.append(E_mean)\n",
     "    T_mean = np.mean(problem.energy.temperature)\n",
     "    T_mean_history.append(T_mean)\n",
     "\n",
     "problem = Problem.from_string(sim)\n",
-    "problem.solver.num_solver.callback_fun = compute_means\n",
+    "problem.add_callback(compute_means)\n",
     "problem.run()\n",
     "problem.animate()"
    ]
@@ -411,13 +410,13 @@
     "z = np.linspace(0, problem.topo.h[i, j], 21)\n",
     "T_z_history = {'iteration': [], 'T_z': []}\n",
     "\n",
-    "def track_T_z(args):\n",
+    "def track_T_z():\n",
     "    \"\"\"Callback to track T(z) profile evolution.\"\"\"\n",
     "    T_z = get_T_z_at_cell(problem, i, j, z)\n",
     "    T_z_history['iteration'].append(len(T_z_history['T_z']))\n",
     "    T_z_history['T_z'].append(T_z.copy())\n",
     "\n",
-    "problem.solver.num_solver.callback_fun = track_T_z\n",
+    "problem.add_callback(track_T_z)\n",
     "\n",
     "# Run simulation\n",
     "problem.run()\n",
@@ -558,13 +557,13 @@
     "# Track temperature history via callback\n",
     "T_history = {'iteration': [], 'T_mean': []}\n",
     "\n",
-    "def track_temperature(args):\n",
+    "def track_temperature():\n",
     "    \"\"\"Callback to track temperature evolution.\"\"\"\n",
     "    T = problem.energy.temperature\n",
     "    T_history['iteration'].append(len(T_history['T_mean']))\n",
     "    T_history['T_mean'].append(np.mean(T[1:-1,1:-1]))\n",
     "\n",
-    "problem.solver.num_solver.callback_fun = track_temperature\n",
+    "problem.add_callback(track_temperature)\n",
     "\n",
     "# Run simulation\n",
     "problem.run()\n",
@@ -795,13 +794,13 @@
     "# Store temperature history for comparison\n",
     "T_history = {'time': [], 'T': []}\n",
     "\n",
-    "def track_temperature(args):\n",
-    "    t = len(T_history['time']) * dt\n",
+    "def track_temperature():\n",
+    "    t = problem.step * dt\n",
     "    T_history['time'].append(t)\n",
     "    T_history['T'].append(problem.energy.temperature[1:-1, 1].copy())\n",
     "\n",
     "problem = Problem.from_string(sim)\n",
-    "problem.solver.num_solver.callback_fun = track_temperature\n",
+    "problem.add_callback(track_temperature)\n",
     "problem.run()"
    ]
   },
@@ -812,77 +811,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Animated comparison with analytic solution\n",
-    "import sys\n",
-    "sys.path.insert(0, './utils')\n",
-    "from analytic import heat_equation_1d\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import animation\n",
-    "from IPython.display import HTML\n",
+    "import sys; sys.path.insert(0, '.')\n",
+    "from utils.plotting import animate_comparison  # type: ignore\n",
+    "from GaPFlow.utils import heat_equation_1d\n",
     "\n",
-    "# Cell centers and normalized coordinates (matching FEM initialization)\n",
-    "dx = L / Nx\n",
-    "x_vec = np.linspace(dx/2, L - dx/2, Nx)\n",
-    "x_norm = (x_vec - dx/2) / (L - dx)  # FEM uses this for initial condition\n",
+    "# FEM solution\n",
+    "T_numeric = np.array(T_history['T'])\n",
     "t_vec = np.array(T_history['time'])\n",
     "\n",
-    "# Compute analytic solution using the same normalized coordinates\n",
-    "# The FEM initializes T(x,0) = sin(pi*x_norm) where x_norm goes from 0 to 1\n",
-    "# This corresponds to a domain of effective length L_eff = L - dx\n",
+    "# Analytic solution\n",
+    "dx = L / Nx\n",
+    "x_vec = np.linspace(dx/2, L - dx/2, Nx)\n",
+    "x_norm = (x_vec - dx/2) / (L - dx) \n",
     "L_eff = L - dx\n",
     "T_analytic = heat_equation_1d(L_eff, cv, k, rho, T_max, x_norm * L_eff, t_vec)\n",
-    "T_numeric = np.array(T_history['T'])\n",
     "\n",
-    "# Print error summary\n",
-    "print(f\"Initial max error: {np.max(np.abs(T_analytic[0] - T_numeric[0])):.2e} (should be ~0)\")\n",
-    "print(f\"Overall max error: {np.max(np.abs(T_analytic - T_numeric)):.2e} (numerical discretization)\")\n",
-    "\n",
-    "# Create animation\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10, 3))\n",
-    "\n",
-    "line_fem, = ax1.plot([], [], 'b-', linewidth=2, label='FEM')\n",
-    "line_ana, = ax1.plot([], [], 'r--', linewidth=2, label='Analytic')\n",
-    "ax1.set_xlim(0, L)\n",
-    "ax1.set_ylim(-0.1, 1.1)\n",
-    "ax1.set_xlabel('x [m]')\n",
-    "ax1.set_ylabel('T [K]')\n",
-    "ax1.set_title('Temperature Profiles')\n",
-    "ax1.legend()\n",
-    "ax1.grid(True, alpha=0.3)\n",
-    "\n",
-    "line_err, = ax2.plot([], [], 'g-', linewidth=2)\n",
-    "ax2.set_xlim(0, L)\n",
-    "ax2.set_ylim(0, 0.02)\n",
-    "ax2.set_xlabel('x [m]')\n",
-    "ax2.set_ylabel('|T_FEM - T_analytic|')\n",
-    "ax2.set_title('Absolute Error')\n",
-    "ax2.grid(True, alpha=0.3)\n",
-    "\n",
-    "time_text = ax1.text(0.02, 0.95, '', transform=ax1.transAxes, fontsize=10)\n",
-    "error_text = ax2.text(0.02, 0.95, '', transform=ax2.transAxes, fontsize=10)\n",
-    "\n",
-    "def init():\n",
-    "    line_fem.set_data([], [])\n",
-    "    line_ana.set_data([], [])\n",
-    "    line_err.set_data([], [])\n",
-    "    time_text.set_text('')\n",
-    "    error_text.set_text('')\n",
-    "    return line_fem, line_ana, line_err, time_text, error_text\n",
-    "\n",
-    "def animate(i):\n",
-    "    line_fem.set_data(x_vec, T_numeric[i])\n",
-    "    line_ana.set_data(x_vec, T_analytic[i])\n",
-    "    error = np.abs(T_numeric[i] - T_analytic[i])\n",
-    "    line_err.set_data(x_vec, error)\n",
-    "    time_text.set_text(f't = {t_vec[i]:.3f} s')\n",
-    "    error_text.set_text(f'max error = {np.max(error):.2e}')\n",
-    "    return line_fem, line_ana, line_err, time_text, error_text\n",
-    "\n",
-    "ani = animation.FuncAnimation(fig, animate, init_func=init, frames=len(t_vec),\n",
-    "                               interval=50, blit=True, repeat=True)\n",
-    "plt.tight_layout()\n",
-    "plt.close(fig)\n",
-    "HTML(ani.to_jshtml())"
+    "animate_comparison(x_vec, t_vec, T_numeric, T_analytic, L)"
    ]
   },
   {
@@ -944,7 +888,7 @@
     "    solver: fem\n",
     "    tol: 0\n",
     "    dt: 0.1\n",
-    "    max_it: 50\n",
+    "    max_it: 100\n",
     "properties:\n",
     "    EOS: PL\n",
     "    shear: 1.846e-5\n",
