--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -70,10 +70,225 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22f4a55b",
+   "metadata": {},
+   "source": [
+    "## Couette Flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c892aab",
+   "metadata": {},
+   "source": [
+    "initial zero flow, building up by U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b1728c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from GaPFlow.problem import Problem\n",
+    "import numpy as np\n",
+    "\n",
+    "problem = Problem.from_yaml(\"examples/couette_2d.yaml\")\n",
+    "problem.q[1] = 0.\n",
+    "print(problem.q[0])\n",
+    "print(problem.q[1])\n",
+    "print(problem.q[2])\n",
+    "problem.run()\n",
+    "\n",
+    "print(np.max(problem.q[2]))  # Max jy\n",
+    "print(np.min(problem.q[2]))  # Min jy\n",
+    "\n",
+    "problem.animate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4858738d",
    "metadata": {},
    "source": [
     "# Energy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fab63da",
+   "metadata": {},
+   "source": [
+    "## Diffusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99c238fa",
+   "metadata": {},
+   "source": [
+    "Dynamic simulation of 2D heat diffusion with comparison to the analytic solution ([YAML File](./examples/temp_diffusion_2d.yaml)).\n",
+    "\n",
+    "Setup:\n",
+    "- Dirichlet temperature boundary conditions in x: T=0 at both ends\n",
+    "- Periodic boundary conditions in y\n",
+    "- Initial temperature: sine profile T(x,0) = T_max * sin(π*x_norm) constant over y\n",
+    "- No wall movement (U=0, V=0), pure diffusion\n",
+    "\n",
+    "Since the initial condition and boundary conditions are uniform in y, and y has periodic BCs, the solution should match the 1D analytic solution:\n",
+    "\n",
+    "$$T(x,t) = T_{max} \\cdot e^{-\\lambda^2 t} \\cdot \\sin\\left(\\pi \\cdot x_{norm}\\right)$$\n",
+    "\n",
+    "where $\\lambda = \\sqrt{\\alpha} \\cdot \\frac{\\pi}{L_{eff}}$ and $\\alpha = \\frac{k}{c_v \\rho}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "z5p8tphv6o",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D Temperature diffusion\n",
+    "import numpy as np\n",
+    "from GaPFlow.problem import Problem\n",
+    "\n",
+    "# Store temperature history for comparison\n",
+    "T_history = {'time': [], 'T': []}\n",
+    "\n",
+    "problem = Problem.from_yaml(\"examples/temp_diffusion_2d.yaml\")\n",
+    "\n",
+    "def track_temperature():\n",
+    "    dt = problem.numerics['dt']\n",
+    "    t = problem.step * dt\n",
+    "    T_history['time'].append(t)\n",
+    "    # Extract T along x at mid-y (should be constant in y)\n",
+    "    T_history['T'].append(problem.energy.temperature[:, problem.grid['Ny']//2 + 1].copy())\n",
+    "\n",
+    "problem.add_callback(track_temperature)\n",
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "duqa6bxpzmd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare with analytic solution\n",
+    "import sys; sys.path.insert(0, '.')\n",
+    "from utils.plotting import animate_comparison  # type: ignore\n",
+    "from GaPFlow.utils import heat_equation_1d\n",
+    "\n",
+    "# Get grid parameters\n",
+    "L = problem.grid['Lx']\n",
+    "Nx = problem.grid['Nx']\n",
+    "dx = problem.grid['dx']\n",
+    "cv = problem.energy_spec['cv']\n",
+    "k = problem.energy_spec['k']\n",
+    "rho = problem.prop['rho0']\n",
+    "T_max = problem.energy_spec['T0'][2]\n",
+    "\n",
+    "# Cell centers including ghost cells: -dx/2, dx/2, 3dx/2, ..., Lx+dx/2\n",
+    "x_vec = np.arange(Nx + 2) * dx - dx / 2\n",
+    "t_vec = np.array(T_history['time'])\n",
+    "\n",
+    "# For half_sine_ghost: T = sin(pi * (x + dx/2) / (Lx + dx))\n",
+    "# Zeros at ghost cell centers: x = -dx/2 and x = Lx + dx/2\n",
+    "# This matches where FEM 2D enforces Dirichlet BC\n",
+    "L_eff = L + dx\n",
+    "x_shifted = x_vec + dx / 2  # shift so x_shifted=0 at x=-dx/2\n",
+    "\n",
+    "T_analytic = heat_equation_1d(L_eff, cv, k, rho, T_max, x_shifted, t_vec)\n",
+    "T_numeric = np.array(T_history['T'])\n",
+    "\n",
+    "animate_comparison(x_vec, t_vec, T_numeric, T_analytic, L)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b43cc290",
+   "metadata": {},
+   "source": [
+    "## Advection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d9eff9",
+   "metadata": {},
+   "source": [
+    "Dynamic simulation of 2D temperature advection with a sine initial profile ([YAML File](./examples/temp_advection_2d.yaml)).\n",
+    "\n",
+    "Setup:\n",
+    "- Periodic boundary conditions in x and y\n",
+    "- Wall motion U > 0 drives Couette flow which advects the temperature\n",
+    "- Initial temperature: half-sine profile in x, constant in y\n",
+    "- No thermal diffusion (k=0)\n",
+    "\n",
+    "The temperature wave travels with the average flow velocity. For Couette flow with wall velocity U, the average velocity is U/2. With periodic boundaries, the sine profile wraps around the domain.\n",
+    "\n",
+    "Since the setup is uniform in y (periodic BC, constant initial T in y), the 2D solution should match 1D behavior.\n",
+    "\n",
+    "Terms used:\n",
+    "- `R31x`, `R31y`: Temperature convection (advection with velocity field)\n",
+    "- `R3T`: Energy time derivative\n",
+    "- Mass and momentum terms for density and velocity fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bu1xd11gff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D Temperature advection\n",
+    "import numpy as np\n",
+    "from GaPFlow.problem import Problem\n",
+    "\n",
+    "problem = Problem.from_yaml(\"examples/temp_advection_2d.yaml\")\n",
+    "\n",
+    "# Store temperature history for animation\n",
+    "T_history = {'time': [], 'T': []}\n",
+    "\n",
+    "def track_T():\n",
+    "    T_history['time'].append(problem.simtime)\n",
+    "    # Extract T along x at mid-y (should be constant in y)\n",
+    "    T_history['T'].append(problem.energy.temperature[:, problem.grid['Ny']//2 + 1].copy())\n",
+    "\n",
+    "problem.add_callback(track_T)\n",
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fm3uyerd7ks",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Animate temperature advection\n",
+    "import sys; sys.path.insert(0, '.')\n",
+    "from utils.plotting import animate_advection  # type: ignore\n",
+    "\n",
+    "# Get grid parameters\n",
+    "L = problem.grid['Lx']\n",
+    "Nx = problem.grid['Nx']\n",
+    "dx = problem.grid['dx']\n",
+    "U = problem.geo['U']\n",
+    "\n",
+    "# For Couette flow, average velocity is U/2\n",
+    "U_avg = U / 2\n",
+    "\n",
+    "# Cell centers including ghost cells\n",
+    "x_vec = np.arange(Nx + 2) * dx - dx / 2\n",
+    "t_vec = np.array(T_history['time'])\n",
+    "T_numeric = np.array(T_history['T'])\n",
+    "\n",
+    "animate_advection(x_vec, t_vec, T_numeric, L, U_avg)"
    ]
   },
   {
