ENH: added diagonal scaling to improve general conditioning

--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -95,10 +95,7 @@
     "import numpy as np\n",
     "\n",
     "problem = Problem.from_yaml(\"examples/couette_2d.yaml\")\n",
-    "problem.q[1] = 0.\n",
-    "print(problem.q[0])\n",
-    "print(problem.q[1])\n",
-    "print(problem.q[2])\n",
+    "problem.q[1] = 0. # Set jx = 0 everywhere\n",
     "problem.run()\n",
     "\n",
     "print(np.max(problem.q[2]))  # Max jy\n",
