--- a/doc/tutorials/11_FEM2d_theory.ipynb
+++ b/doc/tutorials/11_FEM2d_theory.ipynb
@@ -595,6 +595,8 @@
     "```\n",
     "FEMAssemblyLayout        top-level container\n",
     "├── MatrixCOOPattern     COO local and global indices\n",
+    "├── RHSPattern           RHS vector indices\n",
+    "├── ScalingInfo          diagonal scaling factors\n",
     "└── jacobian_terms       holds term/variable specific indices and precomputed values\n",
     "```\n",
     "\n",
@@ -616,6 +618,10 @@
     "| `local_cols` | IntArray | Local column indices for each COO entry |\n",
     "| `global_rows` | IntArray | Global row indices (for PETSc/MPI) |\n",
     "| `global_cols` | IntArray | Global column indices (for PETSc/MPI) |\n",
+    "| `res_block_idx` | Int8Array | Residual block index (0=mass, 1=mom_x, ...) |\n",
+    "| `var_block_idx` | Int8Array | Variable block index (0=ρ, 1=jx, ...) |\n",
+    "\n",
+    "The block indices enable per-variable scaling without recomputing the COO structure.\n",
     "\n",
     "<br>"
    ]
@@ -653,10 +659,60 @@
     "| `rhs` | RHSPattern | RHS vector structure |\n",
     "| `jacobian_terms` | dict | Maps <code style=\"color:#c586c0\">TermKey</code> → `JacobianTermMap` |\n",
     "| `rhs_terms` | dict | Maps <code style=\"color:#c586c0\">TermKey</code> → `RHSTermMap` |\n",
+    "| `scaling` | ScalingInfo | Diagonal scaling factors (see below) |\n",
     "| `dx`, `dy` | float | Grid spacing |\n",
     "| `nb_vars` | int | Number of variables (3 or 4) |\n",
     "| `nb_inner_pts` | int | Number of inner grid points |\n",
     "| `nb_global_pts` | int | Total global grid points |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88i18lv406c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "j54xerf1q2",
+   "metadata": {},
+   "source": [
+    "### Diagonal Scaling\n",
+    "\n",
+    "Variables in the system span different magnitudes (e.g., ρ~10³ kg/m³, E~10⁸ J/m³), leading to an ill-conditioned Jacobian. Diagonal scaling improves conditioning without modifying the physics.\n",
+    "\n",
+    "**Transformation**\n",
+    "\n",
+    "The linear system $J \\cdot \\delta q = -R$ is transformed to:\n",
+    "\n",
+    "$$\n",
+    "J^* \\cdot \\delta q^* = -R^*\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "- $D_q = \\text{diag}(q_\\text{scale})$ — variable scaling (characteristic magnitudes)\n",
+    "- $D_R = \\text{diag}(R_\\text{scale})$ — residual scaling (same as $D_q$ by convention)\n",
+    "- $J^* = D_R^{-1} \\cdot J \\cdot D_q$\n",
+    "- $R^* = D_R^{-1} \\cdot R$\n",
+    "- $\\delta q = D_q \\cdot \\delta q^*$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**ScalingInfo**\n",
+    "\n",
+    "| Attribute | Type | Description |\n",
+    "|-----------|------|-------------|\n",
+    "| `coo_scale` | NDArray | Per-entry scaling for COO values: $1/(R_\\text{scale} \\cdot q_\\text{scale})$ |\n",
+    "| `rhs_scale` | NDArray | Per-DOF residual scaling |\n",
+    "| `sol_scale` | NDArray | Per-DOF solution unscaling |\n",
+    "| `char_scales` | dict | Characteristic scales: `{'rho': ..., 'jx': ..., 'jy': ..., 'E': ...}` |\n",
+    "\n",
+    "Characteristic scales are derived from the problem specification:\n",
+    "- $\\rho_\\text{ref}$ from `rho0`\n",
+    "- $j_\\text{ref} = \\rho_\\text{ref} \\cdot \\max(|U|, |V|)$\n",
+    "- $E_\\text{ref} = \\rho_\\text{ref} \\cdot c_v \\cdot T_\\text{ref}$ (if energy equation active)"
    ]
   },
   {
@@ -721,7 +777,18 @@
    "metadata": {},
    "source": [
     "**`PETSc` alternative for serial execution**\n",
-    "\n"
+    "\n",
+    "When PETSc is unavailable, `ScipySystem` provides a serial fallback using SciPy's sparse direct solver (`splu`). It uses the same COO interface but constructs a local `csr_matrix` instead of distributed PETSc objects.\n",
+    "\n",
+    "```python\n",
+    "class ScipySystem:\n",
+    "    def assemble(self, coo_values, R_local):\n",
+    "        self.mat = csr_matrix((coo_values, (rows, cols)), shape=(n, n))\n",
+    "        self.rhs = -R_local\n",
+    "\n",
+    "    def solve(self, ...):\n",
+    "        return splu(self.mat).solve(self.rhs)\n",
+    "```"
    ]
   },
   {
@@ -828,7 +895,7 @@
     "| `solver_fem_2d.py` | Main 2D FEM solver: Newton iteration, assembly dispatch, time-stepping |\n",
     "| `fem_2d/elements.py` | <code style=\"color:#c586c0\">TriangleQuadrature</code> - shape functions, derivatives, interpolation operators |\n",
     "| `fem_2d/terms.py` | <code style=\"color:#c586c0\">NonLinearTerm</code>, `get_active_terms()`, residual terms (`R11x`, `R11y`, ...) |\n",
-    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <code style=\"color:#c586c0\">RHSTermMap</code>, <br> <code style=\"color:#c586c0\">PETScAssemblyInfo</code> - precomputed indexing, local-global translation and weightings |\n",
+    "| `fem_2d/assembly_layout.py` | <code style=\"color:#c586c0\">FEMAssemblyLayout</code>, <code style=\"color:#c586c0\">MatrixCOOPattern</code>, <code style=\"color:#c586c0\">RHSPattern</code>, <code style=\"color:#c586c0\">ScalingInfo</code>, <code style=\"color:#c586c0\">JacobianTermMap</code>, <code style=\"color:#c586c0\">RHSTermMap</code>, <br> <code style=\"color:#c586c0\">PETScAssemblyInfo</code> - precomputed indexing, local-global translation, scaling, and weightings |\n",
     "| `fem_2d/grid_index.py` | <code style=\"color:#c586c0\">GridIndexManager</code> - local/global index masks, BC handling, stencil connectivity |\n",
     "| `fem_2d/quad_fields.py` | <code style=\"color:#c586c0\">QuadFieldManager</code> - field storage, nodal→quadrature interpolation |\n",
     "| `fem_2d/petsc_system.py` | <code style=\"color:#c586c0\">PETScSystem</code> - distributed matrix assembly and KSP linear solve (parallel/serial) |\n",
