DOC: FEM 2D theory equations

--- a/doc/tutorials/11_FEM2d_theory.ipynb
+++ b/doc/tutorials/11_FEM2d_theory.ipynb
@@ -778,7 +778,7 @@
    "source": [
     "**`PETSc` alternative for serial execution**\n",
     "\n",
-    "When PETSc is unavailable, `ScipySystem` provides a serial fallback using SciPy's sparse direct solver (`splu`). It uses the same COO interface but constructs a local `csr_matrix` instead of distributed PETSc objects.\n",
+    "When PETSc is unavailable, `ScipySystem` provides a serial fallback using SciPy's sparse direct solver (`splu`). Note that this fallback is automatically activated in serial execution when `PETSc` is not available. When running in parallel without `PETSc`, an error is raised.\n",
     "\n",
     "```python\n",
     "class ScipySystem:\n",
@@ -907,7 +907,9 @@
    "id": "82fbdbf2",
    "metadata": {},
    "source": [
-    "# 2D Equations"
+    "# 2D Equations\n",
+    "\n",
+    "Overview of 2D equations solved by the FEM framework."
    ]
   },
   {
@@ -915,8 +917,187 @@
    "id": "b57681c4",
    "metadata": {},
    "source": [
-    "- mention added dy terms\n",
-    "- stabilization terms"
+    "## Mass Conservation\n",
+    "\n",
+    "Mass conservation connects density $\\rho$ and mass fluxes $j_x$, $j_y$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "0 &= \n",
+    "-\\,\\frac{\\overline{\\rho} - \\overline{\\rho}_{\\mathrm{prev}}}{\\Delta t} \\\\[4pt]\n",
+    "&\\quad\n",
+    "-\\,\\frac{\\partial \\overline{j_x}}{\\partial x}\n",
+    "- \\frac{1}{h}\\,\\frac{\\partial h}{\\partial x}\\,\\overline{j_x} \\\\[4pt]\n",
+    "&\\quad\n",
+    "-\\,\\frac{\\partial \\overline{j_y}}{\\partial y}\n",
+    "- \\frac{1}{h}\\,\\frac{\\partial h}{\\partial y}\\,\\overline{j_y} \\\\[4pt]\n",
+    "&\\quad\n",
+    "-\\,\\overline{\\rho}\\,\\frac{1}{h}\\,\\frac{\\partial h}{\\partial t} \\\\[4pt]\n",
+    "&\\quad\n",
+    "-\\,\\alpha_p \\left( \\frac{\\partial^2 p}{\\partial x^2} + \\frac{\\partial^2 p}{\\partial y^2} \\right)\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "i0p31l0xx4",
+   "metadata": {},
+   "source": [
+    "- **R1T**: Time derivative\n",
+    "- **R11x**: Flux divergence in x\n",
+    "- **R11Sx**: Flux divergence height source in x\n",
+    "- **R11y**: Flux divergence in y\n",
+    "- **R11Sy**: Flux divergence height source in y\n",
+    "- **R12**: Height change over time\n",
+    "- **R1Stabx**, **R1Staby**: Pressure stabilization (Brezzi-Pitkäranta style for equal-order elements)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ybcs41qdxs9",
+   "metadata": {},
+   "source": [
+    "## Momentum x\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "0 &= \n",
+    "- \\frac{\\overline{j_x} - \\overline{j_x}_{\\mathrm{prev}}}{\\Delta t} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{\\partial p}{\\partial x} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{\\partial}{\\partial x}\\!\\left( \\frac{\\overline{j_x}^2}{\\overline{\\rho}} \\right)\n",
+    "- \\frac{1}{h} \\frac{\\partial h}{\\partial x}\\, \\frac{\\overline{j_x}^2}{\\overline{\\rho}} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{\\partial}{\\partial y}\\!\\left( \\frac{\\overline{j_x}\\,\\overline{j_y}}{\\overline{\\rho}} \\right)\n",
+    "- \\frac{1}{h} \\frac{\\partial h}{\\partial y}\\, \\frac{\\overline{j_x}\\,\\overline{j_y}}{\\overline{\\rho}} \\\\[2pt]\n",
+    "&\\quad\n",
+    "+ \\frac{\\partial \\overline{\\tau_{xx}}}{\\partial x}\n",
+    "+ \\frac{1}{h} \\frac{\\partial h}{\\partial x}\\, \\left( \\overline{\\tau_{xx}} - \\tau_{xx}\\vert_{z=h_2} \\right) \\\\[2pt]\n",
+    "&\\quad\n",
+    "+ \\frac{1}{h}\\, \\tau_{xz}\\Big\\vert^{z=h_2}_{z=h_1} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{1}{h} \\frac{\\partial h}{\\partial t}\\, \\overline{j_x}\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "q43wdjotj18",
+   "metadata": {},
+   "source": [
+    "- **R2Tx**: Time derivative\n",
+    "- **R21x**: Pressure gradient\n",
+    "- **R22xx**: Momentum flux $j_x j_x$ + height source\n",
+    "- **R22yx**: Momentum flux $j_x j_y$ + height source\n",
+    "- **R23x**: Shear stress $\\tau_{xx}$ + height source\n",
+    "- **R24x**: Wall shear stress $\\tau_{xz}$\n",
+    "- **R25x**: Height change over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "vfiv87878to",
+   "metadata": {},
+   "source": [
+    "## Momentum y\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "0 &= \n",
+    "- \\frac{\\overline{j_y} - \\overline{j_y}_{\\mathrm{prev}}}{\\Delta t} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{\\partial p}{\\partial y} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{\\partial}{\\partial x}\\!\\left( \\frac{\\overline{j_x}\\,\\overline{j_y}}{\\overline{\\rho}} \\right)\n",
+    "- \\frac{1}{h} \\frac{\\partial h}{\\partial x}\\, \\frac{\\overline{j_x}\\,\\overline{j_y}}{\\overline{\\rho}} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{\\partial}{\\partial y}\\!\\left( \\frac{\\overline{j_y}^2}{\\overline{\\rho}} \\right)\n",
+    "- \\frac{1}{h} \\frac{\\partial h}{\\partial y}\\, \\frac{\\overline{j_y}^2}{\\overline{\\rho}} \\\\[2pt]\n",
+    "&\\quad\n",
+    "+ \\frac{\\partial \\overline{\\tau_{yy}}}{\\partial y}\n",
+    "+ \\frac{1}{h} \\frac{\\partial h}{\\partial y}\\, \\left( \\overline{\\tau_{yy}} - \\tau_{yy}\\vert_{z=h_2} \\right) \\\\[2pt]\n",
+    "&\\quad\n",
+    "+ \\frac{1}{h}\\, \\tau_{yz}\\Big\\vert^{z=h_2}_{z=h_1} \\\\[2pt]\n",
+    "&\\quad\n",
+    "- \\frac{1}{h} \\frac{\\partial h}{\\partial t}\\, \\overline{j_y}\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "p25b1knssq9",
+   "metadata": {},
+   "source": [
+    "- **R2Ty**: Time derivative\n",
+    "- **R21y**: Pressure gradient\n",
+    "- **R22xy**: Momentum flux $j_x j_y$ + height source\n",
+    "- **R22yy**: Momentum flux $j_y j_y$ + height source\n",
+    "- **R23y**: Shear stress $\\tau_{yy}$ + height source\n",
+    "- **R24y**: Wall shear stress $\\tau_{yz}$\n",
+    "- **R25y**: Height change over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6d841grjfk",
+   "metadata": {},
+   "source": [
+    "## Energy\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "0 &= \n",
+    "-\\,\\frac{\\overline{E} - \\overline{E}_{\\text{prev}}}{\\Delta t} \\\\[6pt]\n",
+    "&\\quad\n",
+    "-\\,\\frac{\\partial (\\overline{E}\\, \\overline{u})}{\\partial x}\n",
+    "- \\overline{E}\\, \\overline{u}\\,\\frac{1}{h}\\,\\frac{\\partial h}{\\partial x} \\\\[6pt]\n",
+    "&\\quad\n",
+    "-\\,\\frac{\\partial (\\overline{E}\\, \\overline{v})}{\\partial y}\n",
+    "- \\overline{E}\\, \\overline{v}\\,\\frac{1}{h}\\,\\frac{\\partial h}{\\partial y} \\\\[6pt]\n",
+    "&\\quad\n",
+    "-\\,\\frac{\\partial (p\\,\\overline{u})}{\\partial x}\n",
+    "- p\\,\\overline{u}\\,\\frac{1}{h}\\,\\frac{\\partial h}{\\partial x} \\\\[6pt]\n",
+    "&\\quad\n",
+    "-\\,\\frac{\\partial (p\\,\\overline{v})}{\\partial y}\n",
+    "- p\\,\\overline{v}\\,\\frac{1}{h}\\,\\frac{\\partial h}{\\partial y} \\\\[6pt]\n",
+    "&\\quad\n",
+    "+\\,\\frac{\\partial}{\\partial x}\\!\\left(\\overline{\\tau_{xx}}\\,\\overline{u}\\right)\n",
+    "+ \\left(\\overline{\\tau_{xx}}\\,\\overline{u}\\right)\\frac{1}{h}\\,\\frac{\\partial h}{\\partial x} \\\\[6pt]\n",
+    "&\\quad\n",
+    "+\\,\\frac{\\partial}{\\partial y}\\!\\left(\\overline{\\tau_{yy}}\\,\\overline{v}\\right)\n",
+    "+ \\left(\\overline{\\tau_{yy}}\\,\\overline{v}\\right)\\frac{1}{h}\\,\\frac{\\partial h}{\\partial y} \\\\[6pt]\n",
+    "&\\quad\n",
+    "-\\,\\frac{1}{h}\\left(\\tau_{xz,\\text{bot}}\\,U + \\tau_{yz,\\text{bot}}\\,V\\right) \\\\[6pt]\n",
+    "&\\quad\n",
+    "+\\,k\\,\\left( \\frac{\\partial^2 \\overline{T}}{\\partial x^2} + \\frac{\\partial^2 \\overline{T}}{\\partial y^2} \\right) \\\\[6pt]\n",
+    "&\\quad\n",
+    "+ S_{\\text{walls}} \\\\[6pt]\n",
+    "&\\quad\n",
+    "- \\overline{E}\\,\\frac{1}{h}\\,\\frac{\\partial h}{\\partial t}\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "u2p965od3db",
+   "metadata": {},
+   "source": [
+    "- **R3T**: Time derivative\n",
+    "- **R31x**, **R31Sx**: Energy advection in x + height source\n",
+    "- **R31y**, **R31Sy**: Energy advection in y + height source\n",
+    "- **R32x**, **R32Sx**: Pressure work in x + height source\n",
+    "- **R32y**, **R32Sy**: Pressure work in y + height source\n",
+    "- **R33x**: Shear work $\\tau_{xx}$ in x + height source\n",
+    "- **R33y**: Shear work $\\tau_{yy}$ in y + height source\n",
+    "- **R34**: Wall shear work (combines x and y wall velocities)\n",
+    "- **R35x**, **R35y**: Thermal diffusion in x and y\n",
+    "- **R36**: Wall heat balance [see theory](./10_wall_heat.ipynb)\n",
+    "- **R37**: Height change over time"
    ]
   }
  ],
